stateDiagram-v2
    direction LR
    [*] --> Pending
    Pending --> Cancelled : immediate
    Cancelled --> Rejected

    state Pending {
      [*] --> state=PENDING
      state=PENDING --> Timer
      Timer --> [*]
      Timer : Start Timer
    }

    state Rejected {
      [*] --> NotifyRejected
      NotifyRejected --> [*]
      NotifyRejected : Notify onRejected
    }

    state Cancelled {
      [*] --> state=CANCELLED
      state=CANCELLED --> NotifyCancelled
      NotifyCancelled --> [*]
      NotifyCancelled: Notif onCancelled
    }
